--- a/spring-boot-config.yml
+++ b/spring-boot-config.yml
@@ -1,1 +1,14 @@
 
+my:
+  greeting: Hello, I have successfuly read the value from git config server file
+  list.value: One,Two,Three, Four
+
+
+dbValues:
+        "{connectionString:'http://____', userName:'foo', password:'test'}"
+
+
+db:
+   connection: "{connectionStringFromConfigServer:'http://____', userName:'foo', password:'pass'}"
+   host: 127.0.0.1
+   port: 1200
